// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`FavoritePropertiesPage Integration Tests Snapshots should match snapshot with complete page layout structure 1`] = `
<main>
  <nav
    data-testid="breadcrumbs"
  >
    <span
      class=""
      data-href="/profile"
    >
      Profile
    </span>
    <span
      class="active"
      data-href="/properties/favorites"
    >
      Favorite Properties
    </span>
  </nav>
  <section
    data-testid="properties-list"
  >
    <div
      data-testid="property-layout-test-property"
    >
      Layout Test Property
    </div>
  </section>
</main>
`;

exports[`FavoritePropertiesPage Integration Tests Snapshots should match snapshot with empty favorites state 1`] = `
<main>
  <nav
    data-testid="breadcrumbs"
  >
    <span
      class=""
      data-href="/profile"
    >
      Profile
    </span>
    <span
      class="active"
      data-href="/properties/favorites"
    >
      Favorite Properties
    </span>
  </nav>
  <section
    data-testid="properties-list"
  />
</main>
`;

exports[`FavoritePropertiesPage Integration Tests Snapshots should match snapshot with favorite properties 1`] = `
<main>
  <nav
    data-testid="breadcrumbs"
  >
    <span
      class=""
      data-href="/profile"
    >
      Profile
    </span>
    <span
      class="active"
      data-href="/properties/favorites"
    >
      Favorite Properties
    </span>
  </nav>
  <section
    data-testid="properties-list"
  >
    <div
      data-testid="property-snap-fav-1"
    >
      Snapshot Favorite 1
    </div>
    <div
      data-testid="property-snap-fav-2"
    >
      Snapshot Favorite 2
    </div>
  </section>
</main>
`;

exports[`FavoritePropertiesPage Integration Tests Snapshots should match snapshot with single favorite property 1`] = `
<main>
  <nav
    data-testid="breadcrumbs"
  >
    <span
      class=""
      data-href="/profile"
    >
      Profile
    </span>
    <span
      class="active"
      data-href="/properties/favorites"
    >
      Favorite Properties
    </span>
  </nav>
  <section
    data-testid="properties-list"
  >
    <div
      data-testid="property-single-snap-fav"
    >
      Single Snapshot Favorite
    </div>
  </section>
</main>
`;
